# Waccon

./: .gitignore  .websitemeta  Block Diagram.drawio  README.md  kibot.yml
.github/workflows/: build-protocol-translator.yml  build-touch-panel.yml  generate-production-files.yml
.kibot/: plot.kibot.yml
Wacca Controller/: Full Controller.iam
Wacca Controller/Half Ring/: Half Ring.iam
Wacca Controller/Touch Segment/: Back Plate.ipt  Center Plate.ipt  Front Plate.ipt  Inner Bracket.ipt  Joiner.ipt  PCB.ipt  SidePlate.ipt  Touch Casing.ipt  Touch Fifth.ipt  Touch Segment Cover.ipt  Touch Segment.iam
WaccaProtocolTranslator/: CMakeLists.txt  build.sh  main.c  queue.c  serial.c  serial.h  tusb_config.h  waccaserial.c  waccaserial.h
WaccaProtocolTranslator-firmware/: CMakeLists.txt  autobuild.bat  autobuild.sh  build.bat  main.c  queue.h  usbDescriptors.c  waccaserial.c  waccaserial.h
WaccaProtocolTranslator-pcb/: WaccaProtocolTranslator.kicad_pcb  WaccaProtocolTranslator.kicad_prl  WaccaProtocolTranslator.kicad_pro  WaccaProtocolTranslator.kicad_sch
WaccaTouchPanel/: CMakeLists.txt  autobuild.sh  main.c
WaccaTouchPanel-firmware/: CMakeLists.txt  autobuild.bat  build.bat  build.sh  main.c
WaccaTouchPanel-pcb/: CustomSymbols.kicad_sym  WaccaTouchPanel.kicad_pcb  WaccaTouchPanel.kicad_prl  WaccaTouchPanel.kicad_pro  WaccaTouchPanel.kicad_sch  pcbBorder.dxf  sym-lib-table
